fixed issue of white space at bottom of the page

--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -3,6 +3,17 @@ a {
   text-decoration: none;
 };
 
+html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+body{
+  margin: 0;
+  padding: 0;
+  min-height: 100%;
+}
 
 .navbar {
   background-color: $graphite;
@@ -43,8 +54,6 @@ a {
       color: $cloud;
       padding-right: 30px;
       
-      
-
       &:hover {
         text-decoration: underline;
       }
@@ -73,7 +82,6 @@ a {
 .foot {
   background-color: $gray-lt;
   
-
     &__copyright {
       display: flex;
       font-family: 'TitilliumWeb';
@@ -81,7 +89,7 @@ a {
       font-weight: normal;
       font-size: .6875rem;
       line-height: 16px;
-      padding: 350px 0 40px 0;
+      padding: 490px 0 40px 0;
       margin: 0;
       color: $slate;
       text-align: center;
